# excalidrawplus

./: .gitignore  README.md  build-desktop.bat  build-desktop.command  package.json
.github/workflows/: build-desktop.yml
.kiro/specs/cloud-sync-desktop/: .config.kiro  design.md  requirements.md  tasks.md
.serena/: project.yml
excalidraw-app/: index.tsx  package.json  vite.config.mts
excalidraw-app/src/cloud-sync/: CloudSyncApp.tsx  autosave.ts  cloud-sync.scss  tauri-api.d.ts  tauri-bridge.ts  types.ts  utils.ts
excalidraw-app/src/cloud-sync/__tests__/property/: autosave.property.test.ts  file-list.property.test.ts
excalidraw-app/src/cloud-sync/__tests__/unit/: CloudSyncApp.test.tsx  CosConfigForm.test.tsx  FileListSidebar.test.tsx  SyncStatusIndicator.test.tsx
excalidraw-app/src/cloud-sync/components/: CosConfigForm.tsx  FileListSidebar.tsx  SyncStatusIndicator.tsx
scripts/: package-desktop.ps1  package-desktop.sh
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  connectivity.rs  cos_client.rs  database.rs  file_store.rs  lib.rs  logging.rs  main.rs  models.rs  sync_engine.rs
src-tauri/src/tests/: mod.rs
src-tauri/src/tests/integration/: mod.rs  sync_flow_tests.rs
src-tauri/src/tests/property/: commands_tests.rs  conflict_tests.rs  database_tests.rs  file_store_tests.rs  mod.rs  sync_engine_tests.rs
