[package]
name = "excalidraw-cloud-sync"
version = "0.1.0"
description = "Excalidraw desktop app with cloud sync via Tencent Cloud Object Storage"
authors = ["Excalidraw Contributors"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "excalidraw_cloud_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2 desktop runtime
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite (bundled so no system dependency on sqlite)
rusqlite = { version = "0.31", features = ["bundled"] }

# Tencent COS via S3-compatible API
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# Hashing for content-hash computation
sha2 = "0.10"

# UUID v4 generation for file IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
